# Applications-Scripts

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
Client-Server-Api/: README.md
Filters/: log_data_interpretation.py
Filters/Test/: _set_name_single_ap_dataframe.py  fleetlogbuffile.txt  logo_robotthree.txt  test_set_name_single_ap_dataframe.py
Logs/: all_ap_dataframe_file.txt
Packer-ansible/: README.md
Util/: api_connection.py  utils.py
statistics-from-logs-exporter/: Dockerfile  main.py  pyproject.toml
statistics-from-logs-exporter/Filters/: log_comparer.py  log_generator.py
statistics-from-logs-exporter/Filters/Test/: test_set_name_single_ap_dataframe.py
statistics-from-logs-exporter/Logs/: interpreted_data_file.txt  logger_config.py
statistics-from-logs-exporter/Util/: robot_data.py
