[tool.poetry]
name = "stats-from-logs-exporter"
version = "0.1.0"
description = "log interpretation script"
authors = ["MichaelRobotics"]
license = "MichaelRobotics"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
